--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" class="hover-underline">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management" class="hover-underline">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing"class="hover-underline">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
@@ -29,21 +29,21 @@
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization-min.jpg" alt="A brainstormd image showing the steps behind creating a strong online presence using SEO 'Search Enging Optimisation'" class="float-left" />
+            <img id="contentimg" src="./assets/images/search-engine-optimization-min.jpg" alt="A brainstormd image showing the steps behind creating a strong online presence using SEO 'Search Enging Optimisation'" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management-min.jpg" alt="Viewing graphs that highlight the boosts in reputation that come from having a strong focus on managing your online presence" class="float-right" />
+            <img id="contentimg" src="./assets/images/online-reputation-management-min.jpg" alt="Viewing graphs that highlight the boosts in reputation that come from having a strong focus on managing your online presence" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing-min.jpg" alt="A group of professionas creating strategies for strong social media engamnet" class="float-left" />
+            <img id="contentimg" src="./assets/images/social-media-marketing-min.jpg" alt="A group of professionas creating strategies for strong social media engamnet" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
