added a favicon and continued simplfying .css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
+    <link rel="icon" type="image" href="/assets/images/favicon-32x32.png">
     <meta name="description" content="Take the risk out of managing your SEO, Social Managemet and Marketing. Let us handle that so you can build your business.">
 </head>
 
+<!--======================== -->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,7 +28,9 @@
             </ul>
         </div>
     </div>
+
     <div class="hero"></div>
+    
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img id="contentimg" src="./assets/images/search-engine-optimization-min.jpg" alt="A brainstormd image showing the steps behind creating a strong online presence using SEO 'Search Enging Optimisation'" class="float-left" />
