removed the hero image from the .css file and included it in HTML so that i could add ALT text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="description" content="Take the risk out of managing your SEO, Social Managemet and Marketing. Let us handle that so you can build your business.">
 </head>
 
-<!--======================== -->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -29,7 +28,9 @@
         </div>
     </div>
 
-    <div class="hero"></div>
+
+    <div class="hero"><img src="./assets/images/digital-marketing-meeting-min.jpg" alt="Profesionals working on soloutuions for website wireframe and creating the best user experience"></div>
+
     
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
@@ -54,6 +55,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -77,6 +79,7 @@
             </p>
         </div>
     </div>
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
