bug fix favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
-    <link rel="icon" type="image" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon-32x32.png">
     <meta name="description" content="Take the risk out of managing your SEO, Social Managemet and Marketing. Let us handle that so you can build your business.">
 </head>
 
