--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
     </div>
 
 
-    <div class="hero"><img src="./assets/images/digital-marketing-meeting-min.jpg" alt="Profesionals working on soloutuions for website wireframe and creating the best user experience"></div>
+    <div class="hero"><img src="./assets/images/digital-marketing-meeting-min.jpg" alt="Professionals working on solutions for website wire-frame and creating the best user experience"></div>
 
     
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img id="contentimg" src="./assets/images/search-engine-optimization-min.jpg" alt="A brainstormd image showing the steps behind creating a strong online presence using SEO 'Search Enging Optimisation'" class="float-left" />
+            <img id="content-img" src="./assets/images/search-engine-optimization-min.jpg" alt="A brainstorm image showing the steps behind creating a strong online presence using SEO 'Search Engine Optimization'" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img id="contentimg" src="./assets/images/online-reputation-management-min.jpg" alt="Viewing graphs that highlight the boosts in reputation that come from having a strong focus on managing your online presence" class="float-right" />
+            <img id="content-img" src="./assets/images/online-reputation-management-min.jpg" alt="Viewing graphs that highlight the boosts in reputation that come from having a strong focus on managing your online presence" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img id="contentimg" src="./assets/images/social-media-marketing-min.jpg" alt="A group of professionas creating strategies for strong social media engamnet" class="float-left" />
+            <img id="content-img" src="./assets/images/social-media-marketing-min.jpg" alt="A group of professionals creating strategies for strong social media engagement" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
