last on i swear! I wanted to add a couple of comments in the html and css to explain my thinking

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="Take the risk out of managing your SEO, Social Managemet and Marketing. Let us handle that so you can build your business.">
 </head>
 
+<!-- I thought about changing the div's to things like article or aside to help with the .css but changed my mind because I still need to learn more about what tags are avaliable and how/what is more "industry standard" I read conflicting articles -->
+
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
