fixed a broken link for favicon

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon-32x32.png">
-    <meta name="description" content="Take the risk out of managing your SEO, Social Managemet and Marketing. Let us handle that so you can build your business.">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon-32x32.png">
+    <meta name="description" content="Take the risk out of managing your SEO, Social Management and Marketing. Let us handle that so you can build your business.">
 </head>
 
 <!-- I thought about changing the div's to things like article or aside to help with the .css but changed my mind because I still need to learn more about what tags are avaliable and how/what is more "industry standard" I read conflicting articles -->
